--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,10 +34,12 @@ body {
   cursor: pointer;
   z-index: 1;
   transition: transform 1s ease, opacity 1s ease;
+  width: 200px; /* Increased size for images */
+  height: auto;
 }
 
 .paper img {
-  max-width: 80%;  /* Adjusted image size */
+  width: 100%;
   border-radius: 10px;
 }
 
