--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -71,6 +71,13 @@ body {
   background: #f0e68c;
 }
 
+.paper.image img {
+  width: 100px; /* Smaller width */
+  height: 100px; /* Smaller height */
+  border-radius: 10px;
+  object-fit: cover; /* Ensure the image fits within the smaller dimensions */
+}
+
 img {
   max-width: 100%;
   border-radius: 10px;
