--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,7 +7,7 @@ body {
   overflow: hidden;
   background: linear-gradient(to right, #f9b9d1, #f6c6d4);
   font-family: 'Arial', sans-serif;
-  color: #ff4d4d;
+  color: #d17373;
   position: relative;
 }
 
