--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,7 +15,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 20px;
+  gap: 40px; /* Adjusted for proper spacing between images */
 }
 
 .paper {
@@ -78,16 +78,4 @@ h1 {
   font-size: 30px;
   color: #ff4d4d;
   font-weight: bold;
-}
-
-button#play-audio {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  padding: 10px 15px;
-  background-color: #ff8c00;
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
 }
